core/main/default/objects/Vehicle__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Vehicle&#39;s brand.</description>
    <label>Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abarth</fullName>
            </value>
            <value>
                <fullName>Alfa Romeo</fullName>
            </value>
            <value>
                <fullName>Alpina</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>Aro</fullName>
            </value>
            <value>
                <fullName>Artega</fullName>
            </value>
            <value>
                <fullName>Aston Martin</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Autobianchi</fullName>
            </value>
            <value>
                <fullName>Auverland</fullName>
            </value>
            <value>
                <fullName>Bentley</fullName>
            </value>
            <value>
                <fullName>Bertone</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Bollore</fullName>
                <label>Bolloré</label>
            </value>
            <value>
                <fullName>Buick</fullName>
            </value>
            <value>
                <fullName>Cadillac</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>Chrysler</fullName>
            </value>
            <value>
                <fullName>Citroen</fullName>
                <label>Citroën</label>
            </value>
            <value>
                <fullName>Dacia</fullName>
            </value>
            <value>
                <fullName>Daewoo</fullName>
            </value>
            <value>
                <fullName>Daihatsu</fullName>
            </value>
            <value>
                <fullName>Daimler</fullName>
            </value>
            <value>
                <fullName>Dangel</fullName>
            </value>
            <value>
                <fullName>De La Chapelle</fullName>
            </value>
            <value>
                <fullName>Dodge</fullName>
            </value>
            <value>
                <fullName>Donkervoort</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>Ferrari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>