core/main/default/objects/Vehicle__c/fields/CO2Emission__c.field-meta.xml
<CustomField>
    <fullName>CO2Emission__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Vehicle&#39;s CO2 emission in g/km</description>
    <inlineHelpText>g/km</inlineHelpText>
    <label>CO2 Emission</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>