core/main/default/objects/Vehicle__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Vehicle body&#39;s color.</description>
    <label>Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>