core/main/default/objects/Vehicle__c/fields/Cylinders__c.field-meta.xml
<CustomField>
    <fullName>Cylinders__c</fullName>
    <description>Vehicle&#39;s number of cylinders</description>
    <label>Cylinders</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>