core/main/default/objects/Vehicle__c/fields/DateOfFirstCirculation__c.field-meta.xml
<CustomField>
    <fullName>DateOfFirstCirculation__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Vehicle&#39;s date of first circulation.</description>
    <label>Date of First Circulation</label>
    <type>Date</type>
</CustomField>