core/main/default/objects/Vehicle__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Fuel or type of energy for the vehicle.</description>
    <label>Engine</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Ethanol</fullName>
            </value>
            <value>
                <fullName>Hydrogen</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Biodiesel</fullName>
            </value>
            <value>
                <fullName>Compressed Natural Gas (CNG)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>