core/main/default/objects/Vehicle__c/fields/Gearbox__c.field-meta.xml
<CustomField>
    <fullName>Gearbox__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Vehicle&#39;s transmission type.</description>
    <label>Gearbox</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>