core/main/default/objects/Vehicle__c/fields/Horsepower__c.field-meta.xml
<CustomField>
    <fullName>Horsepower__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Vehicle&#39;s metric horsepower.</description>
    <inlineHelpText>PS</inlineHelpText>
    <label>Horsepower</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>