core/main/default/objects/Vehicle__c/fields/InitialDistance__c.field-meta.xml
<CustomField>
    <fullName>InitialDistance__c</fullName>
    <description>Vehicle&#39;s initial distance.</description>
    <label>Initial Distance</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>