core/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Vehicle&#39;s model.</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>