core/main/default/objects/Vehicle__c/fields/ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ModelYear__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Model year.</description>
    <label>Model Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>