core/main/default/objects/Vehicle__c/fields/Places__c.field-meta.xml
<CustomField>
    <fullName>Places__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Number of places in the vehicle.</description>
    <label>Places</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>