core/main/default/objects/Vehicle__c/fields/VehicleRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>VehicleRegistrationNumber__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Registration number for the vehicle.</description>
    <externalId>true</externalId>
    <label>Vehicle Registration Number</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>