core/main/default/objects/Vehicle__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Vehicle Identification Number.</description>
    <externalId>true</externalId>
    <inlineHelpText>Vehicle Identification Number</inlineHelpText>
    <label>VIN</label>
    <length>19</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>