core/main/default/objects/Vehicle__c/validationRules/Core_VinLengthEquals17.validationRule-meta.xml
<ValidationRule>
    <fullName>Core_VinLengthEquals17</fullName>
    <active>true</active>
    <description>The number of characters in a Vehicle Identification Number (VIN) should be 17.</description>
    <errorConditionFormula>AND (
				ISCHANGED(VIN__c),
				NOT(ISNULL(VIN__c)),
				LEN(VIN__c) &lt;&gt; 17
)</errorConditionFormula>
    <errorDisplayField>VIN__c</errorDisplayField>
    <errorMessage>VIN should have 17 characters.</errorMessage>
</ValidationRule>